--- a/paraStrava.ipynb
+++ b/paraStrava.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# paraStrava - paragliding analysis on Strava data\n",
+    "# StravaGlinding - paragliding analysis on Strava data\n",
     "## Authorization "
    ]
   },
