Created script and requirements

--- a/Strava_paragliding_analysis.ipynb
+++ b/Strava_paragliding_analysis.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using postman or CURL, make a POST request to https://www.strava.com/oauth/token?client_id=[YOUR_CLIENT_ID]&client_secret=[YOUR_CLIENT_SECRET]&code=[CODE_FROM_PREVIOUS_STEP]&grant_type=authorization_code"
+    "3. Using postman or CURL, make a POST request to https://www.strava.com/oauth/token?client_id=[YOUR_CLIENT_ID]&client_secret=[YOUR_CLIENT_SECRET]&code=[CODE_FROM_PREVIOUS_STEP]&grant_type=authorization_code"
    ]
   },
   {
@@ -50,12 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open file config.ini (or else create such file on root using example_config.ini). Update the file with the below fields and save:\n",
+    "4. Open file config.ini (or else create such file on root using example_config.ini). Update the file with the below fields and save:\n",
     "- client_id\n",
     "- client_secret\n",
     "- access_token\n",
     "- refresh_token\n",
-    "- expires_at (in seconds from epoch format - same as the above response)\n"
+    "- expires_at (in seconds from epoch format - same as the above response. Also works if left at zero)\n"
    ]
   },
   {
@@ -677,13 +677,6 @@
     "score = classifier.score(X_test, y_test)\n",
     "print(\"The calculated score of the classifier is {}\".format(score))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
